[63] Switch to Spring Boot 3.0.0
Bug: https://github.com/svalyn/svalyn-studio/issues/63
Signed-off-by: Stéphane Bégaudeau <stephane.begaudeau@gmail.com>